{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 5,
  "lineage": "cbabbdc8-d8eb-05f7-779b-84e00a83e82f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0522ab6e1ddcc7055",
            "arn": "arn:aws:ec2:ap-south-1:654654279957:instance/i-07ce38542e9f1804f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ce38542e9f1804f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2f0cf6c60379327",
            "private_dns": "ip-172-31-38-166.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.166",
            "public_dns": "ec2-65-0-74-162.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.74.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0112de2053919e8cd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx_sg_mumbai"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cf7cff85bfbd218",
            "tags": {
              "Name": "NginxInstance1"
            },
            "tags_all": {
              "Name": "NginxInstance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddc672c3fe9cf7d7"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg_south"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01811d4912b4ccb26",
            "arn": "arn:aws:ec2:ap-southeast-1:654654279957:instance/i-0fa8f234edb1fb06c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa8f234edb1fb06c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d9e409bab2dbe76",
            "private_dns": "ip-172-31-27-117.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.117",
            "public_dns": "ec2-13-229-124-84.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.124.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f3951e8d301319f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx_sg_singapore"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b17dbb52b0711c9c",
            "tags": {
              "Name": "NginxInstance2"
            },
            "tags_all": {
              "Name": "NginxInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081060507958c968d"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg_southeast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg_south",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654279957:security-group/sg-0ddc672c3fe9cf7d7",
            "description": "Allow HTTP traffic in ap-south-1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddc672c3fe9cf7d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg_mumbai",
            "name_prefix": "",
            "owner_id": "654654279957",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093c9322a0cfd871b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg_southeast",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ap-southeast",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:654654279957:security-group/sg-081060507958c968d",
            "description": "Allow HTTP traffic in ap-southeast-1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081060507958c968d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg_singapore",
            "name_prefix": "",
            "owner_id": "654654279957",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04801dee13e77b279"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}